<resources>
    <string name="app_name">Virtual ledger</string>

    <string name="authentication_password_hint">Password</string>
    <string name="authentication_email_hint">E-Mail</string>
    <string name="authentication_register_firstname_hint">First Name</string>
    <string name="authentication_register_lastname_hint">Last Name</string>
    <string name="authentication_register_title">Registration</string>
    <string name="authentication_register_button_text">Register</string>
    <string name="authentication_register_terms_and_conditions">By joining virtual ledger, you agree to the <u> terms and conditions </u></string>
    <string name="authentication_login_title">Login</string>
    <string name="authentication_login_button_text">Login</string>
    <string name="authentication_login_register_first_link"><u>Register first</u></string>
    <string name="authentication_login_permanent_checkbox">Stay logged in</string>

    <string name="calendar_view_daily_transaction_aggregated_amount">Amount</string>

    <string name="main_menu_drawer_opened">open</string>
    <string name="main_menu_drawer_closed">closed</string>
    <string name="main_menu_drawer_bank_accesses">Bank Accesses</string>
    <string name="main_menu_drawer_transaction_overview">Transaction Overview</string>
    <string name="main_menu_drawer_saving_accounts">Saving Accounts</string>
    <string name="main_menu_drawer_settings">Settings</string>
    <string name="main_menu_drawer_logout">Logout</string>
    <string name="main_menu_drawer_contacts">Contacts</string>

    <string name="banking_overview_title">Bank Accesses</string>
    <string name="banking_overview_app_bar_add_bank_access">Add bank access</string>
    <string name="banking_overview_app_bar_refresh">Refresh</string>
    <string name="banking_overview_no_bank_access_text">No bank accesses registered yet</string>
    <string name="banking_overview_no_bank_access_button_text">Add Bank Accesses</string>
    <string name="banking_overview_add_access_name_hint">Login name</string>
    <string name="banking_overview_add_access_password_hint">Password</string>
    <string name="banking_overview_add_access_button_text">Add Bank Access</string>
    <string name="banking_overview_add_access_title">Add bank access</string>
    <string name="banking_overview_add_access_blz_hint">BLZ</string>
    <string name="banking_overview_finish_selecting_accounts_button_text">Show Transactions</string>
    <string name="banking_overview_total_amount_text">TOTAL</string>
    <string name="banking_overview_enable_all_accounts_checkbox">Enable all bank accounts</string>

    <string name="contacts_title">Contacts</string>
    <string name="contacts_no_contacts_saved_text">No contacts added yet</string>
    <string name="contacts_no_contacts_button_text">Add Contacts</string>
    <string name="contacts_add_contacts_title">Add Contacts</string>
    <string name="contacts_add_contacts_button">Add Contact</string>
    <string name="contacts_add_contacts_email_hint">E-Mail</string>
    <string name="contacts_app_bar_add">Add contacts</string>

    <string name="transaction_overview_title">Transactions</string>
    <string name="transaction_overview_app_bar_refresh">Refresh</string>
    <string name="transaction_overview_calendar_button_text">Show Calendar</string>

    <string name="saving_accounts_title">Saving Accounts</string>
    <string name="saving_accounts_app_bar_add">Add savings account</string>

    <string name="pref_example_title">Example Preference</string>

    <string name="authentication_activity_chooser_demo_account_button">Demo Account</string>
    <string name="authentication_activity_chooser_oidc_button">Authenticate now!</string>
    <string name="add_savings_account_button_previous">Previous</string>
    <string name="add_savings_account_button_next">Next</string>
    <string name="add_savings_account_enter_name_text">Enter a name for your savings account</string>
    <string name="add_savings_account_enter_name_hint">Name</string>
    <string name="add_savings_account_enter_name_info_needed_message">Please insert a name.</string>
    <string name="add_savings_account_enter_goal_info_needed_message">Please insert a goal amount you want to save.</string>
    <string name="add_savings_account_enter_goal_info_needed_message_not_zero">The goal amount should not be zero.</string>
    <string name="add_savings_account_enter_amount_hint">Goal balance</string>
    <string name="add_savings_account_enter_amount_text">Enter the goal balance</string>
    <string name="add_savings_account_button_submit">Submit</string>
    <string name="add_savings_account_enter_final_date_text">Enter the termination date for this account</string>
    <string name="add_savings_account_choose_time_type">Choose a type of goal</string>
    <string name="add_savings_account_time_type_one_time">One time</string>
    <string name="add_savings_account_time_type_periodic">Periodic</string>
    <string name="add_savings_account_choose_accounts_button">Choose Accounts</string>
    <string name="add_savings_account_choose_accounts_text">Choose accounts that are enabled for the transaction of money to this deposit</string>
    <string name="add_savings_account_choose_finish_goal_date">When will you have spent the money?</string>
    <string name="add_savings_account_choose_assignment">Assign the saving goal to ...</string>
    <string name="add_savings_account_choose_assignment_amount_per_person" formatted="false">You assigned %s to the savings goal.\nThe amount per person is %s€.</string>

    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>


    <string name="contact">Contact</string>

    <string name="date_range_chosser_title">Please specify your date range. Select your first day and your last day of transactions.\n</string>

    <string name="from">From: </string>
    <string name="choose_button_text">(choose)</string>
    <string name="to">To: </string>

    <string name="add_savings_account_choose_bank_accounts_text" >Please assign bank accounts to your saving goal</string>
    <string name="test_bank_Account" >TestAccount</string>
    <string name="test_contact_name">Gundula Düsentieb</string>
    <string name="add_savings_account_enter_sub_goal">Enter a sub goal</string>
    <string name="add_savings_account_edit_text_enter_sub_goal_balance">Sub goal balance</string>
    <string name="add_savings_account_button_add_sub_goal">Add</string>
    <string name="add_savings_account_edit_text_enter_sub_goal_name">Sub goal name</string>
    <string name="add_savings_account_text_view_sub_goal_total">Total goal balance: %.2f</string>
    <string name="add_savings_account_text_view_choose_amount_type">Choose a type of balance goal</string>
    <string name="add_savings_account_radio_button_amount_type_normal">A single balance goal</string>
    <string name="add_savings_account_radio_button_amount_type_split">Several subgoals</string>

</resources>
