<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <TextView
        android:id="@+id/add_savings_account_text_view_choose_time_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/add_savings_account_choose_time_type"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_savings_account_text_view_choose_time_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <RadioButton
            android:id="@+id/add_savings_account_radio_button_time_type_one_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add_savings_account_time_type_one_time" />

        <RadioButton
            android:id="@+id/add_savings_account_radio_button_time_type_periodic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_savings_account_time_type_periodic"/>
    </RadioGroup>
</RelativeLayout>
