<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/contacts_add_contacts_title"
        android:textColor="@color/colorBankingOverview"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/email_addcontacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/contacts_add_contacts_email_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorBankingOverview"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_addContacts_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.4"
        android:background="@color/colorBankingOverview"
        android:text="@string/contacts_add_contacts_button"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/fontSizeL"
        />

</LinearLayout>