<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/add_savings_account_text_view_enter_sub_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add_savings_account_enter_sub_goal"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/add_savings_account_linear_layout_add_sub_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_savings_account_edit_text_sub_goal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_savings_account_edit_text_enter_sub_goal_name"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/add_savings_account_edit_text_sub_goal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_savings_account_edit_text_enter_sub_goal_balance"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

        <Button
            android:id="@+id/add_savings_account_button_add_sub_goal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/add_savings_account_button_add_sub_goal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/add_savings_account_list_view_sub_goals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/add_savings_account_text_view_sub_goal_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/fontSizeL"/>

</LinearLayout>
