<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authentication_activity_chooser_header"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/fontSizeXL"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/authentication_activity_chooser_demo_workflow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/authentication_login_button_margin_side"
            android:layout_marginRight="@dimen/authentication_login_button_margin_side"
            android:background="@android:color/holo_blue_light"
            android:text="@string/authentication_activity_chooser_demo_account_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/authentication_activity_chooser_oidc_workflow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="@dimen/authentication_login_button_margin_side"
            android:layout_marginRight="@dimen/authentication_login_button_margin_side"
            android:background="@android:color/holo_blue_light"
            android:text="@string/authentication_activity_chooser_oidc_button"
            android:textColor="@android:color/background_light" />

    </LinearLayout>


</LinearLayout>